added Gson dependency for the project; launcher can now inject username for unlogged account